Headers, Cards a a first attempt to a sketch

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family:"DM Sans";
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Gallery{
+  display: inline-flex;
+  align-items: flex-start;
+  flex-direction: row;
+  padding: 16px;
+  gap: 16px;
+
 }
+
